projects/compiler/test/typechecker/try/error_bad_return_type.abra
func foo(): Result<Int, String> = Ok(123)

func bar(): Int {
  val x = try foo()
  x + 1
}